fix: Reset spacing for words and add ! to important

--- a/slack-dark-mode.css
+++ b/slack-dark-mode.css
@@ -1,6 +1,5 @@
 body {
-    text-rendering: optimizeLegibility important;
-    word-spacing: -1px;
+    text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: auto;
 }
 .p-context_bar {
